# S2MOdataPy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
DemoAnotation/: .env-modelo  .gitignore  README.md  database.py  main.py  mock_data.py  requirements.txt
DemoAnotation/annotations/: __init__.py  decorators.py  metadata_builder.py  parser.py
DemoAnotation/docs/: 001_planejamento.md
DemoAnotation/models/: __init__.py  customer.py  order.py  product.py
DemoAnotation/odata/: __init__.py  endpoint.py  query_parser.py
DemoAnotation/tests/: conftest.py  test_metadata.py  test_read.py  test_write.py
docs/: empacotar_s2modatapy.py
docs/tutorial/: estudo-completo.py
examples/: basic_usage.py
s2modatapy/: __init__.py  client.py  debug.py  exceptions.py  query_builder.py
s2modatapy/parsers/: __init__.py  annotations.py
tests/: __init__.py  test_client.py
