[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2modatapy"
version = "0.1.0"
description = "S2MOdataPy - Biblioteca Python para cliente OData V4 com suporte multi-formato"
authors = [
    {name = "Christopher N. S. M. Mauricio", email = "christopher.nicolas.mauricio@gmail.com"}
]
license = {text = "MIT License with Attribution"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.2"
]

[project.urls]
Homepage = "https://github.com/ChristopherNicolasSMM/S2MOdataPy"
Repository = "https://github.com/ChristopherNicolasSMM/S2MOdataPy.git"
Documentation = "https://github.com/ChristopherNicolasSMM/S2MOdataPy"

[project.scripts]
s2modata = "s2modatapy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["s2modatapy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88