[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2modatapy"
version = "0.2.0"
description = "S2MOdataPy - Biblioteca Python para cliente OData V4 com suporte a metadados e anotações de UI"
authors = [
    {name = "Christopher N. S. M. Mauricio", email = "christopher.nicolas.mauricio@gmail.com"}
]
license = {text = "MIT License with Attribution"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage      = "https://github.com/ChristopherNicolasSMM/S2MOdataPy"
Repository    = "https://github.com/ChristopherNicolasSMM/S2MOdataPy.git"
Documentation = "https://github.com/ChristopherNicolasSMM/S2MOdataPy"

[tool.setuptools.packages.find]
where   = ["."]
include = ["s2modatapy*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = "test_*.py"
addopts      = "-v --tb=short"

[tool.black]
line-length    = 100
target-version = ["py38"]

[tool.isort]
profile     = "black"
line_length = 100
